--- a/thatsfantastic/static/sass/application.scss
+++ b/thatsfantastic/static/sass/application.scss
@@ -54,12 +54,12 @@ h3 {
 a {
     color: $action-color;
     text-decoration: none;
-    @include transition(color 0.4s ease-out);
 
     &:active,
     &:focus,
     &:hover,
     &.active {
+        @include transition(color 0.4s ease-out);
         color: lighten($action-color, 25%);
     }
 }
@@ -143,6 +143,12 @@ input[type="text"] {
 
 .outer-container {
     @include outer-container(800px);
+}
+
+.columns {
+    @include media($tablet) {
+        @include pad();
+    }
 }
 
 .row {
